# waemon

./: .clang-format  CMakeLists.txt  LICENSE  readme.md  waemon.example.jsonc
cmake/: FindCAIRO.cmake
protocols/: wlr-layer-shell-unstable-v1.xml
src/: BasicGroup.cc  Common.cc  Common.hh  Config.cc  Config.hh  Group.cc  Group.hh  IPC.cc  IPC.hh  Socket.cc  Socket.hh  SpanGroup.cc  WallpaperGroup.cc  WallpaperGroup.hh  WallpaperImage.cc  WallpaperImage.hh  WallpaperManager.cc  WallpaperManager.hh  main.cc  panic.cc  panic.hh  wayland.cc  wayland.hh
src/old/: font.h
src/util/: Socket.cc  color.hh  displayMode.hh  lock.cc  lock.hh  log.hh  math2d.hh  panic.cc  panic.hh  rect.cc  rect.hh
src/wayland/: LayerSurface.cc  LayerSurface.hh  WaylandManager.cc  WaylandManager.hh  WaylandOutput.cc  WaylandOutput.hh
